--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.5.3",
     "next": "12.2.5",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
